security: implement OWASP Top 10 hardening, security headers, and integration tests